--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   get_it: ^7.2.0
+  url_strategy: ^0.2.0
 
 dev_dependencies:
   flutter_test:
